@@ -1,8 +1,8 @@
 module CruiseControl
   module VERSION #:nodoc:
     unless defined? MAJOR
-      MAJOR = 0 
-      MINOR = 5
+      MAJOR = 1 
+      MINOR = 0
       MAINTENANCE = 0
 
       STRING = [MAJOR, MINOR, MAINTENANCE].join('.')
